# mitreattack-python

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .sonarcloud.properties  AGENTS.md  CHANGELOG.md  LICENSE.txt  MANIFEST.in  NOTICE.txt  README.md  conftest.py  justfile  pyproject.toml  requirements-dev.txt  setup.py  sonar-project.properties
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint-and-test.yml  lint-publish.yml  pr-title.yml  release-and-publish.yml
docs/: CONTRIBUTING.md  RELEASE.md  additional_modules.rst  attacktoexcel.rst  attacktojava.rst  collections.rst  conf.py  contributing.rst  differenceinstix.rst  differentstix.rst  diffinstix.rst  diffstix.rst  getting_started.rst  index.rst  installation.rst  mitre_attack_data.rst  modules.rst  navlayercore.rst  navlayers.rst  notice.rst  related_work.rst  start.rst  usage.rst
docs/additional_modules/: attackToExcel.rst  collections.rst  diffStix.rst  navlayers.rst
docs/mitre_attack_data/: custom_objects.rst  examples.rst  mitre_attack_data.rst
docs/stix_overview/: access-attack.rst  attack_id.rst  by_alias.rst  by_name.rst  deprecated_revoked.rst  getting-started.rst  getting_related_objects.rst  getting_revoked_object.rst  getting_software.rst  multiple_objects.rst  objects_by_content.rst  objects_by_type.rst  objects_since_date.rst  relationships_microlibrary.rst  remove_revoked_deprecated.rst  stix-recipes.rst  stix_id.rst  tactics_by_matrix.rst  techniques_by_group_sw.rst  techniques_by_platform.rst  techniques_by_tactic.rst  techniques_subtechniques.rst
docs/stix_primer/: access-attack.rst  attack_id.rst  by_alias.rst  by_name.rst  deprecated_revoked.rst  getting_related_objects.rst  getting_revoked_object.rst  getting_software.rst  multiple_objects.rst  objects_by_content.rst  objects_by_type.rst  objects_since_date.rst  overview.rst  relationships_microlibrary.rst  remove_revoked_deprecated.rst  stix-recipes.rst  stix_id.rst  tactics_by_matrix.rst  techniques_by_group_sw.rst  techniques_by_platform.rst  techniques_by_tactic.rst  techniques_subtechniques.rst
examples/: .env.example  README.md  analytic_extractor.py  attack-object-counter.py  generate_excel_files.py  generate_multiple_attack_diffs.py  get_all_assets.py  get_all_assets_targeted_by_all_techniques.py  get_all_campaigns.py  get_all_campaigns_attributed_to_all_groups.py  get_all_campaigns_using_all_software.py  get_all_campaigns_using_all_techniques.py  get_all_datacomponents.py  get_all_datacomponents_detecting_all_techniques.py  get_all_datasources.py  get_all_groups.py  get_all_groups_attributing_to_all_campaigns.py  get_all_groups_using_all_software.py  get_all_groups_using_all_techniques.py  get_all_matrices.py  get_all_mitigations.py  get_all_mitigations_mitigating_all_techniques.py  get_all_parent_techniques.py  get_all_parent_techniques_of_all_subtechniques.py  get_all_software.py  get_all_software_used_by_all_campaigns.py  get_all_software_used_by_all_groups.py  get_all_software_using_all_techniques.py  get_all_subtechniques.py  get_all_subtechniques_of_all_techniques.py  get_all_tactics.py  get_all_techniques.py  get_all_techniques_detected_by_all_datacomponents.py  get_all_techniques_mitigated_by_all_mitigations.py  get_all_techniques_targeting_all_assets.py  get_all_techniques_used_by_all_campaigns.py  get_all_techniques_used_by_all_groups.py  get_all_techniques_used_by_all_software.py  get_assets_targeted_by_technique.py  get_attack_id.py  (+44 more)
mitreattack/: MitreAttackData.py  __init__.py  constants.py  custom_attack_objects.py  download_stix.py  gen_test.json  get_tactics_by_technique.py  mitre_attack_data.py  release_info.py
mitreattack/attackObjects/: README.md  relationships.py
mitreattack/attackToExcel/: README.md  __init__.py  attackToExcel.py  stixToDf.py
mitreattack/attackToJava/: README.md  attackToJava.py  getJavaImports.py  stixToJava.py
mitreattack/attackToJava/templates/: AbstractTactic.jinja2  GenericTactic.jinja2  MitreAttackDatasource.jinja2  MitreAttackDefensesBypassed.jinja2  MitreAttackPlatform.jinja2  MitreTTP.jinja2  Tactic.jinja2  Technique.jinja2  pom.jinja2
mitreattack/collections/: README.md  __init__.py  collection_to_index.py  index_to_markdown.py  stix_to_collection.py
mitreattack/diffStix/: README.md  changelog_helper.py  notes.txt  release_info.py
mitreattack/diffStix/cli/: __init__.py  argument_parser.py
mitreattack/diffStix/core/: attack_changes_encoder.py  change_detector.py  configuration_manager.py  contributor_tracker.py  data_loader.py  data_structure_initializer.py  diff_stix.py  domain_statistics.py  hierarchy_builder.py  statistics_collector.py
mitreattack/diffStix/formatters/: __init__.py  html_output.py  json_generator.py  layer_generator.py  layer_output.py  markdown_generator.py
mitreattack/diffStix/utils/: constants.py  stix_utils.py  url_utils.py  version_utils.py
mitreattack/examples/mitre_attack_data/: get_all_campaigns.py  get_all_campaigns_attributed_to_all_groups.py  get_all_campaigns_using_all_software.py  get_all_campaigns_using_all_techniques.py  get_all_datacomponents.py  get_all_datacomponents_detecting_all_techniques.py  get_all_datasources.py  get_all_groups.py  get_all_groups_attributing_to_all_campaigns.py  get_all_groups_using_all_software.py  get_all_groups_using_all_techniques.py  get_all_matrices.py  get_all_mitigations.py  get_all_mitigations_mitigating_all_techniques.py  (+72 more)
mitreattack/navlayers/: README.md  __init__.py  layerExporter_cli.py  layerGenerator_cli.py
mitreattack/stix20/: MitreAttackData.py  __init__.py  custom_attack_objects.py
navlayers/: README.md
scripts/: update_release_info.py
tests/: conftest.py  test_cli.py  test_collections.py  test_layers.py  test_mass.py  test_mitreattackdata.py  test_release_info_updater.py  test_stix20.py  test_stix_to_df.py  test_to_excel.py  test_to_java.py
tests/changelog/: conftest.py  test_utils.py
tests/resources/: demo.json  heatmap_example.json  ics-bundle.json  index.json  testing_data.py
(+57 files in other folders)
