[project]
name = "mitreattack-python"
description = "MITRE ATT&CK python library"
version = "5.4.1"
authors = [{ name = "MITRE ATT&CK", email = "attack@mitre.org" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "colour>=0.1.5",
    "deepdiff>=6.6.0",
    "drawsvg>=2.4.0",
    "loguru>=0.6.0",
    "Markdown>=3.5",
    "numpy>=1.26.1",
    "openpyxl>=3.1.2",
    "pandas>=2.1.1",
    "pooch>=1.7.0",
    "python-dateutil>=2.8.2",
    "Pillow>=10.1.0",
    "requests>=2.31.0",
    "rich>=13.6.0",
    "stix2>=3.0.1",
    "tabulate>=0.9.0",
    "tqdm>=4.66.1",
    "typer>=0.9.0",
    "typing-extensions>=4.0.0",
    "wheel>=0.41.2",
    "xlsxwriter>=3.1.8",
]

[project.urls]
homepage = "https://github.com/mitre-attack/mitreattack-python/"
repository = "https://github.com/mitre-attack/mitreattack-python/"
documentation = "https://mitreattack-python.readthedocs.io/"

[project.scripts]
attackToExcel_cli = 'mitreattack.attackToExcel.attackToExcel:main'
layerExporter_cli = 'mitreattack.navlayers.layerExporter_cli:main'
layerGenerator_cli = 'mitreattack.navlayers.layerGenerator_cli:main'
indexToMarkdown_cli = 'mitreattack.collections.index_to_markdown:main'
collectionToIndex_cli = 'mitreattack.collections.collection_to_index:main'
diff_stix = 'mitreattack.diffStix.changelog_helper:main'
download_attack_stix = 'mitreattack.download_stix:app'

[project.optional-dependencies]
dev = [
    "check-wheel-contents>=0.6.1",
    "commitizen>=4.9.1",
    "pre-commit>=4.0.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-dotenv>=0.5.2",
    "python-semantic-release>=10.5.0",
    "responses>=0.25.8",
    "ruff>=0.14.2",
]
docs = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[build-system]
requires = ["uv_build>=0.6.5,<0.7"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "mitreattack"
module-root = ""

[tool.ruff]
line-length = 120
extend-exclude = ["tests/resources/", "examples/", "__init__.py"]

[tool.ruff.lint]
ignore = [
    "E501", # line-too-long
]
# On top of the defaults (E, F), enable pydocstyle (D), isort (I), and bugbear (B).
select = ["E", "F", "D", "I", "B"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
build_command = """
    python -m pip install --upgrade uv
    uv lock --upgrade-package mitreattack-python
    uv build
"""

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "revert", "test"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
bump_message = "bump: version $current_version → $new_version"
update_changelog_on_bump = true
changelog_incremental = true
legacy_tag_formats = ["v$version"]
version_files = [
    "docs/conf.py:^version = ['\"](.*)['\"]",
    "docs/conf.py:^release = ['\"](.*)['\"]",
    "mitreattack/__init__.py:^__version__ = ['\"](.*)['\"]",
]
